tests/spec/compile-fail/147_bridge_result_error_code_missing.zn
// category: compile-fail
// profile: hosted
// purpose: Result bridge return requires an explicit C error-code mapping

module tests.fail.bridgeResultErrorCodeMissing;

import core.result.{Result, Ok, Err};

enum ParseError {
    BadInput,
}

@export("parse_i32", bridge: C)
pub fn parse(value: I32) -> Result<I32, ParseError> { // expected-error: ParseError must implement CErrorCode for bridge C Result lowering
    if value < 0 {
        return Err(ParseError.BadInput);
    }
    return Ok(value);
}
